# embeddings-of-aesop

./: .gitignore  README.md  compare_perplexity.py  deduplicate_fables.py  embed_fables.py  pyproject.toml  query_fables.py  scrape_fables.py  visualize_tsne.py
